# CA_lab

./: CMakeLists.txt  constant.h  histogram.h  main.c  matrix_multiplication.h  utility.h
cuda_self_learn/: cuda_basic.tex
cuda_self_learn/refs/: lect19_cuda1.pptx
parallel_programming/: average.cu  histogram_loop_splitting.c
quantum_computing/: parallel-processing.tex  quantum.tex
quantum_computing/refs/: jlpea-v11-i02_20230319.bib
turing_architecture/: turing.tex
